fixed qr code stretching

--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -100,12 +100,13 @@
   overflow: hidden;
   grid-row: span 1;
   grid-column: span 1;
+  display: flex;
 }
 
-.qrcode {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.gif2050 img{
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .AnimatedGif {
